--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 					<li><a href="#" id="load-priv-key"><p>Load a Private key</p></a></li>
 					<li><a href="#" id="encrypt"><p>Encrypt a message</p></a></li>
 					<li><a href="#" id="decrypt"><p>Decrypt a message</p></a></li>
+					<li><a href="#" id="empty"><p>Empty database</p></a></li>
 				</ul>
 			</section>
 		</article>
