Sending encrypted message via email

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, user-scalable=no" />
-	<meta name="theme-color" content="#242d33">
+	<meta name="theme-color" content="#ffffff">
 
 	<!-- Some Gaia components -->
 	<link href="css/gaia/headers.css" rel="stylesheet" />
@@ -35,7 +35,7 @@
 	
 </head>
 <body role='application'>
-	<section role='region' id='home' data-position="current" class='skin-dark'>
+	<section role='region' id='home' data-position="current" class='skin-organic'>
 		<header class='fixed'>
 			<h1>OpenPGP</h1>
 		</header>
@@ -52,9 +52,10 @@
 			</section>
 		</article>
 	</section>
-	<section role="region" id="right" data-position="right" class="skin-dark">
+	<section role="region" id="right" data-position="right" class="skin-organic">
 		<header class="fixed">
 			<button id="back" data-icon="back"></button>
+			<menu type='toolbar' id='tbar'>	</menu>
 			<h1 id="head"></h1>
 		</header>
 		<article class="content scrollable header" id="wrapper">
