Trying to retrieve pub keys from pgp.mit.edu

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, user-scalable=no" />
-	<meta name="theme-color" content="#ffffff">
+	<meta name="theme-color" content="#f97c17">
 
 	<!-- Some Gaia components -->
 	<link href="css/gaia/headers.css" rel="stylesheet" />
@@ -35,7 +35,7 @@
 	
 </head>
 <body role='application'>
-	<section role='region' id='home' data-position="current" class='skin-organic'>
+	<section role='region' id='home' data-position="current">
 		<header class='fixed'>
 			<h1>OpenPGP</h1>
 		</header>
@@ -47,12 +47,12 @@
 					<li><a href="#" id="load-priv-key"><p>Load a Private key</p></a></li>
 					<li><a href="#" id="encrypt"><p>Encrypt a message</p></a></li>
 					<li><a href="#" id="decrypt"><p>Decrypt a message</p></a></li>
-					<li><a href="#" id="empty"><p>Empty database</p></a></li>
+					<li><a href="#" id="database"><p>Local database</p></a></li>
 				</ul>
 			</section>
 		</article>
 	</section>
-	<section role="region" id="right" data-position="right" class="skin-organic">
+	<section role="region" id="right" data-position="right">
 		<header class="fixed">
 			<button id="back" data-icon="back"></button>
 			<menu type='toolbar' id='tbar'>	</menu>
