Importing Public key working
Now it's possible to modify names of the keys in the database

--- a/index.html
+++ b/index.html
@@ -62,6 +62,18 @@
 			<!-- ... -->
 		</article>
 	</section>
+	<section role="region" id="down" data-position="down">
+		<header class="fixed">
+			<button id="close" data-icon="close"></button>
+			<menu type="toolbar">
+				<button disabled></button>
+			</menu>
+			<h1 id="head_down"></h1>
+		</header>
+		<article class="content scrollable header" id="wrapper_down">
+			<!-- ... -->
+		</article>
+	</section>
 </body>
 </html>
 
