Added 'search in sdcard' function

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 	<script src="js/jquery-2.1.1.min.js"></script>
 	<script src="js/openpgp.min.js"></script>
 	<script src="js/openpgp.worker.min.js"></script>
+	<script src="js/applait.finder.min.js"></script>
 	<script src="js/status.js"></script>
 	<script src="js/storage.js"></script>
 	<script src="js/app.js"></script>
