Added Info sections

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 <body role='application'>
 	<section role='region' id='home' data-position="current">
 		<header class='fixed'>
+			<button disbled></button>
+			<menu type='toolbar'>
+				<button id='info' data-icon='info'></button>
+			</menu>
 			<h1>OpenPGP</h1>
 		</header>
 		<article class="content scrollable header">
