--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 	<script src="js/openpgp.min.js"></script>
 	<script src="js/openpgp.worker.min.js"></script>
 	<script src="js/applait.finder.min.js"></script>
+	<script src="js/FileSaver.min.js"></script>
 	<script src="js/status.js"></script>
 	<script src="js/storage.js"></script>
 	<script src="js/app.js"></script>
