Added search a public key from file, #3

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<link href="css/gaia/action_menu.css" rel="stylesheet" />
 	<link href="css/gaia/input_areas.css" rel="stylesheet" />
 	<link href="css/gaia/value_selectors.css" rel="stylesheet" />
+	<link href="css/gaia/switches.css" rel="stylesheet" />
 	
 	<!-- Some others stylish stuff -->
 	<link href="css/style.css" rel="stylesheet" />
@@ -71,9 +72,6 @@
 	<section role="region" id="down" data-position="down">
 		<header class="fixed">
 			<button id="close" data-icon="close"></button>
-			<menu type="toolbar">
-				<button disabled></button>
-			</menu>
 			<h1 id="head_down"></h1>
 		</header>
 		<article class="content scrollable header" id="wrapper_down">
