--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, user-scalable=no" />
-	<meta name="theme-color" content="#f97c17">
+	<meta name="theme-color" content="#f97c17" />
 
 	<!-- Some Gaia components -->
 	<link href="css/gaia/headers.css" rel="stylesheet" />
@@ -16,7 +16,6 @@
 	<link href="css/gaia/action_menu.css" rel="stylesheet" />
 	<link href="css/gaia/input_areas.css" rel="stylesheet" />
 	<link href="css/gaia/value_selectors.css" rel="stylesheet" />
-	<link href="css/gaia/switches.css" rel="stylesheet" />
 	
 	<!-- Some others stylish stuff -->
 	<link href="css/style.css" rel="stylesheet" />
