--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<link href="css/gaia/buttons.css" rel="stylesheet" />
 	<link href="css/gaia/action_menu.css" rel="stylesheet" />
 	<link href="css/gaia/input_areas.css" rel="stylesheet" />
-	<link href="css/gaia/value_selectors.css" rel="stylesheet" />
+	<link href="css/gaia/value_selector.css" rel="stylesheet" />
 	
 	<!-- Some others stylish stuff -->
 	<link href="css/style.css" rel="stylesheet" />
